tests/core/snapshots/caching-collision.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Bar {
  foo: Foo
  id: String!
}

scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

type Foo {
  id: Int!
}

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  bars: [Bar]
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
