tests/core/snapshots/caching-collision.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(baseURL: "http://example.com") {
  query: Query
}

type Bar {
  foo: Foo @http(path: "/foo?id={{.value.id}}") @cache(maxAge: 300)
  id: String!
}

type Foo {
  id: Int!
}

type Query @cache(maxAge: 100) {
  bars: [Bar] @http(path: "/bars")
}
