tests/core/snapshots/caching.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  fieldCache: Type
  fieldCacheList: [Type]
  typeCache: TypeCache
}

type Type {
  id: Int
}

type TypeCache {
  a: Type
  b: Type
  list: [Type]
}

schema {
  query: Query
}
