tests/core/snapshots/call-graphql-datasource.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "title": "a",
          "user": {
            "name": "Leanne Graham"
          }
        },
        {
          "title": "b",
          "user": {
            "name": "Leanne Graham"
          }
        },
        {
          "title": "c",
          "user": {
            "name": "Ervin Howell"
          }
        },
        {
          "title": "d",
          "user": {
            "name": "Ervin Howell"
          }
        }
      ]
    }
  }
}
