tests/core/snapshots/call-multiple-steps-piping.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "abc_input": 3
    }
  }
}
